# RConsole

./: .gitignore  CMakeLists.txt  README.md
client/: Client.cpp  Client.hpp  Exceptions.hpp  Lobby.cpp  Lobby.hpp  NetworkClient.cpp  NetworkClient.hpp  Player.cpp  Player.hpp  RClient.cpp  RClient.hpp  RClientLobby.cpp  RClientLobby.hpp  RPlayer.cpp  RPlayer.hpp  Utils.cpp  Utils.hpp  icon.rc  main.cpp
client/Controller/: Controller.cpp  Controller.hpp  Exceptions.hpp  IController.hpp  KeyboardController.cpp  KeyboardController.hpp  MobileController.cpp  MobileController.hpp  Packet.hpp
client/gui/: connect.gui  connecting.gui  controller.gui  lobbies.gui  mainPage.gui
gamepad/3ds/: .gitignore  Makefile  README.md
gamepad/3ds/resources/: AppInfo
gamepad/3ds/source/: main.cpp  main.h
gamepad/3ds/source/info/: Info.cpp  Info.hpp
gamepad/3ds/source/keyboard/: Keyboard.cpp  Keyboard.hpp
gamepad/3ds/source/socket/: Socket.cpp  Socket.hpp
gamepad/3ds/sources/: Client3ds.cpp  Client3ds.hpp  Error.cpp  Error.hpp  Keyboard.cpp  Keyboard.hpp  Main.cpp  Network.cpp  Network.hpp  Socket.cpp  Socket.hpp  Text.cpp  Text.hpp  Touch.cpp  Touch.hpp  Utils.hpp  Vector2.hpp
gamepad/app/: build.gradle
gamepad/app/src/androidTest/java/com/rconsole/rgamepad/: ExampleInstrumentedTest.kt
gamepad/app/src/main/: AndroidManifest.xml
gamepad/app/src/main/java/com/rconsole/rgamepad/: AsyncParams.kt  MainActivity.kt  Network.kt  Packet.kt  ReceiveData.kt  Repeater.kt  SendData.kt  Utils.kt
gamepad/app/src/main/res/layout/: activity_main.xml  gamepad_activity.xml  register_activity.xml
gamepad/app/src/main/res/values/: strings.xml
gamepad/app/src/test/java/com/rconsole/rgamepad/: ExampleUnitTest.kt
gamepad/gradle/wrapper/: gradle-wrapper.properties
gamepad/mobile/: settings.gradle
gamepad/mobile/app/: build.gradle
gamepad/mobile/app/src/androidTest/java/com/rconsole/rgamepad/: ExampleInstrumentedPacket.kt
gamepad/mobile/app/src/main/: AndroidManifest.xml
gamepad/mobile/app/src/main/java/com/rconsole/rgamepad/: Exception.kt  MainActivity.kt  MySensor.kt  Network.kt  Packet.kt  Repeater.kt  Utils.kt
gamepad/mobile/app/src/main/res/layout/: gamepad_activity.xml  register_activity.xml
gamepad/mobile/app/src/main/res/values/: strings.xml
gamepad/mobile/app/src/test/java/com/rconsole/rgamepad/: ExampleUnitPacket.kt
games/: ICGame.hpp  ISGame.hpp
games/pong/: CGame.cpp  CGame.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Player.cpp  Player.hpp  PongPackets.hpp  SGame.cpp  SGame.hpp  Utils.cpp  Utils.hpp  macro.hpp
network/: ClientConnection.cpp  ClientConnection.hpp  Connection.cpp  Connection.hpp  Exceptions.hpp  RPackets.hpp  ServerConnection.cpp  ServerConnection.hpp  Utils.cpp  Utils.hpp
server/: Client.cpp  Client.hpp  ClientConnection.cpp  ClientConnection.hpp  ClientList.cpp  ClientList.hpp  Lobby.cpp  Lobby.hpp  LobbyList.cpp  LobbyList.hpp  ServerMain.cpp  ServerMain.hpp  exc.hpp  main.cpp
